fix(combobox): update bottom border color to align with spec (#898)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [X] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: N/A

## What is the new behavior?

## Does this PR introduce a breaking change?

- [ ] Yes
- [X] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

---------

--- a/projects/angular/src/forms/combobox/_combobox.clarity.scss
+++ b/projects/angular/src/forms/combobox/_combobox.clarity.scss
@@ -165,7 +165,7 @@
 
     @include mixins.css-var(
       border-bottom-color,
-      clr-forms-border-color,
+      clr-combobox-border-bottom-color,
       forms-variables.$clr-forms-border-color,
       variables.$clr-use-custom-properties
     );
